--- a/main.html
+++ b/main.html
@@ -8,6 +8,20 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<button id="myBtn">Open Modal</button>
+
+	<!-- The Modal -->
+	<div id="myModal" class="modal">
+		  <!-- Modal content -->
+		  <div class="modal-content">
+			  <div class="header"><h1>Modal Header</h1></div>
+			  <div class="content">
+				<p>Modal Body content</p>
+				<span class="close">&times;</span>
+			  </div>
+		  </div>
+	</div>
+	
     <script type="text/javascript" src="./script.js">
 </script>
 
