--- a/main.html
+++ b/main.html
@@ -11,7 +11,7 @@
 	<button id="myBtn">Open Modal</button>
 
 	<!-- The Modal -->
-	<div id="myModal" class="modal">
+	<div id="openModal" class="modal">
 		  <!-- Modal content -->
 		  <div class="modal-content">
 			  <div class="header"><h1>Modal Header</h1></div>
