--- a/main.html
+++ b/main.html
@@ -8,10 +8,10 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<button id="myBtn">Open Modal</button>
+	<button id="openModal">Open Modal</button>
 
 	<!-- The Modal -->
-	<div id="openModal" class="modal">
+	<div id="myModal" class="modal">
 		  <!-- Modal content -->
 		  <div class="modal-content">
 			  <div class="header"><h1>Modal Header</h1></div>
