--- a/main.html
+++ b/main.html
@@ -11,13 +11,13 @@
 	<button id="openModal">Open Modal</button>
 
 	<!-- The Modal -->
-	<div id="myModal" class="modal">
+	<div id="myModal" class="modal-body">
 		  <!-- Modal content -->
 		  <div class="modal-content">
-			  <div class="header"><h1>Modal Header</h1></div>
+			  <div class="modal-header"><h1>Modal Header</h1></div>
 			  <div class="content">
 				<p>Modal Body content</p>
-				<span class="close">&times;</span>
+				<span class="close-modal">&times;</span>
 			  </div>
 		  </div>
 	</div>
