--- a/main.html
+++ b/main.html
@@ -11,10 +11,10 @@
 	<button id="openModal">Open Modal</button>
 
 	<!-- The Modal -->
-	<div id="myModal" class="modal-body">
+	<div id="myModal" class="modal">
 		  <!-- Modal content -->
-		  <div class="modal-content">
-			  <div class="modal-header"><h1>Modal Header</h1></div>
+		  <div class="modal-body">
+			  <h2 class="modal-header">Modal Header</h2>
 			  <div class="content">
 				<p>Modal Body content</p>
 				<span class="close-modal">&times;</span>
