--- a/main.html
+++ b/main.html
@@ -14,7 +14,7 @@
 	<div id="myModal" class="modal">
 		  <!-- Modal content -->
 		  <div class="modal-body">
-			  <h2 class="modal-header">Modal Header</h2>
+			  <div class="modal-header"><h2>Modal Header</h2></div>
 			  <div class="content">
 				<p>Modal Body content</p>
 				<span class="close-modal">&times;</span>
