--- a/main.html
+++ b/main.html
@@ -14,10 +14,12 @@
 	<div id="myModal" class="modal">
 		  <!-- Modal content -->
 		  <div class="modal-body">
-			  <div class="modal-header"><h2>Modal Header</h2></div>
-			  <div class="content">
-				<p>Modal Body content</p>
-				<span class="close-modal">&times;</span>
+			  <div class="modal-header">
+				  <h2>Modal Header</h2>
+				  <div class="content">
+					<p>Modal Body Content</p>
+					<span class="close-modal">&times;</span>
+				  </div>
 			  </div>
 		  </div>
 	</div>
